# eu-nutri

./: Dockerfile  README.md  pyproject.toml
src/: main.py  settings.py
src/application/: webhook_controller.py
src/application/use_cases/: calculate_macros.py
src/infrastructure/ai_integration/: llm_model.txt  open_ai_integration.py
src/infrastructure/message/: twilio_integration.py
src/infrastructure/nutrion_database/: fatsecret_integration.py
