[tool.poetry]
name = "eu-nutri"
version = "0.1.0"
description = ""
authors = ["Barbara Mariani"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
twilio = "^8.11.0"
fastapi = "^0.68.0"
openai = "^0.27.0"
uvicorn = "^0.15.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
